@@ -57,6 +57,7 @@ Application Fixes:
 - Weapon accessories can now modify the Reach of their parent weapon. Closes #4204
 - The weapon selection form now displays weapons' base concealability.
 - Vehicle and/or drone mods with a minimum rating greater than 1 now properly take their minimum into consideration for availability and cost filters in the vehicle/drone mod selection screen.
+- The option to allow for skill points to be used to break skill groups no longer disables spending skill points on all skill groups under certain circumstances.
 
 Data Changes:
 - Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
